src/test/ui/higher-rank-trait-bounds/normalize-under-binder/issue-62529-3.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-62529-3.rs:25:9
   |
LL |         call(f, ());
   |         ^^^^ cannot infer type of the type parameter `T` declared on the function `call`
   |
help: consider specifying the generic arguments
   |
LL |         call::<T, F>(f, ());
   |             ++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
